# complier

./: .coverage  .gitignore  AGENTS.md  Cargo.toml  MESS.md  README.md  pyproject.toml
.github/workflows/: rust.yml  test.yml
archive/demo/: contract_demo.cpl  test_remote_mcp_wrapper.py
archive/harness/: agent.py  test.py
archive/src/complier/integration/: __init__.py
archive/src/complier/wrappers/: local_stdio_proxy.py  remote_http_proxy.py
archive/tests/: test_runtime_and_errors.py
archive/tests/contract/: helpers.py
cc/: README.md
cc/cc/: __init__.py  __main__.py  client.py  discovery.py  protocol.py  sidecar.py
cc/examples/: settings.json
cli/: Cargo.toml
cli/src/: daemon.rs  main.rs
cli/src/commands/: choose.rs  hook.rs  human.rs  install.rs  mod.rs
cli/src/extensions/cc/: contract.rs  hook.rs  mod.rs  setup.rs
core/: Cargo.toml
core/ast/: Cargo.toml
core/ast/src/: lib.rs
core/compiler/: Cargo.toml
core/compiler/src/: lib.rs  validation.rs
core/compiler/tests/: compile_graph.rs  compiler.rs  loading.rs  validation.rs
core/parser/: Cargo.toml
core/parser/src/: lexer.rs  lib.rs  parse.rs
core/parser/tests/: errors.rs  grammar.rs  guarantees.rs  param_values.rs  steps.rs
core/runtime/: Cargo.toml
core/runtime/src/: lib.rs
core/session/: Cargo.toml
core/session/src/: context.rs  decisions.rs  errors.rs  events.rs  lib.rs  memory.rs  remediation.rs  server.rs  session.rs  state.rs
core/session/tests/: enforcement.rs  evaluator.rs  kickoff.rs  memory_loading.rs  memory_store.rs  session_context.rs  tool_checks.rs
core/wrappers/: Cargo.toml
core/wrappers/src/: blocked.rs  function.rs  lib.rs  local.rs  mcp.rs  naming.rs  remote.rs
core/wrappers/tests/: function_wrapper.rs  integration.rs  mcp_proxy.rs  mcp_wrapper.rs  runtime.rs
csm/: .clang-format  Makefile  README.md  compile_flags.txt
csm/include/complier/: ast.hpp  compiler.hpp  complier.hpp  contract.hpp  error.hpp  lexer.hpp  parser.hpp  runtime.hpp
csm/src/: compiler.cpp  complier.cpp  contract.cpp  lexer.cpp  parser.cpp
csm/tests/: compiler_test.cpp  contract_test.cpp  lexer_test.cpp  main.cpp  parser_test.cpp  smoke_test.cpp  testing.hpp
daemon/: __init__.py  __main__.py  client.py  discovery.py  formatting.py  protocol.py  server.py  sessions.py
demo/: .env.example  contract_demo.cpl  local_mcp_downstream.py  remote_mcp_downstream.py  run_agents_sdk_demo.py  run_ollama_agents_sdk_demo.py  sample_mcp_server.py  test_local_mcp_wrapper.py  test_remote_mcp_wrapper.py  visualize_contract.py
extensions/cc/: README.md  __init__.py  __main__.py  contract.py  hook.py
extensions/cc/examples/: complier.cpl
harness/: demo.cpl  run_demo.py
landing/: package-lock.json  package.json
landing/app/: globals.css  layout.tsx  page.tsx
landing/app/components/: ContractPlayground.tsx  Reveal.tsx
landing/app/docs/: page.tsx
landing/content/docs/: checks-and-guarantees.md  control-flow.md  core-syntax.md  docs.md  runtime-and-wrappers.md
src/: ast.rs  lexer.rs  main.rs  parser.rs
src/complier/: __init__.py  verification.py
src/complier/contract/: __init__.py  ast.py  compiler.py  evaluator.py  model.py  parser.py  runtime.py  transformer.py  validation.py
src/complier/errors/: __init__.py  blocked.py
src/complier/integration/: __init__.py  function.py  model.py
src/complier/integration/mcp/: __init__.py  local.py  local_stdio_proxy.py  remote.py  remote_http_proxy.py
src/complier/memory/: __init__.py  model.py  store.py
src/complier/runtime/: __init__.py  events.py  remediation.py
src/complier/session/: __init__.py  context.py  decisions.py  server.py  session.py  state.py
src/complier/visualizer/: __init__.py  graph.py  server.py
src/complier/wrappers/: __init__.py  function.py  local_mcp.py  local_stdio_proxy.py  mcp.py  remote_http_proxy.py  remote_mcp.py
studio/: .gitignore  requirements.txt
studio/backend/: api.py  main.py  mcp_store.py  oauth_callback.py  oauth_flow.py  runner.py  store.py  token_store.py
studio/frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
studio/frontend/src/: App.tsx  main.tsx  types.ts
studio/frontend/src/components/: Canvas.tsx  ChatPanel.tsx  CodeEditor.tsx  ConfigPanel.tsx  LogsPanel.tsx  NodePalette.tsx  RunOutput.tsx  Settings.tsx  Sidebar.tsx  ToolDropdown.tsx  ToolPopover.tsx
studio/frontend/src/lib/: bridge.ts  cpl-ast-to-steps.ts  graph-to-cpl.test.ts  (+2 more)
tests/: __init__.py  test_cel_verifier.py  test_integration.py  test_verification.py
tests/contract/: __init__.py  test_compiler.py  test_errors.py  test_evaluator.py  test_guarantees.py  test_loading.py  test_param_values.py  test_steps.py  test_validation.py
tests/daemon/: test_formatting.py
tests/integration/: test_function.py
tests/integration/mcp/: test_mcp.py
tests/memory/: test_loading.py  test_store.py
tests/session/: test_kickoff.py  test_session_context.py  test_tool_checks.py
tests/studio/: test_cpl_compilation.py
tests/visualizer/: test_visualizer.py
tests/wrappers/: __init__.py  test_function_wrapper.py  test_mcp_wrapper.py
visualizer/: package.json
visualizer-app/: index.html
visualizer-app/src/: App.js  App.jsx  main.js  styles.css
visualizer/src/: App.js
(+28 files in other folders)
