[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "complier"
version = "0.1.0"
description = "Workflow enforcement for tool-using AI agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Kavish Sathia" },
]
keywords = [
  "agents",
  "ai",
  "workflow",
  "guardrails",
  "mcp",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "lark>=1.2.2",
]

[project.optional-dependencies]
dev = [
  "coverage>=7.6",
  "coverage-badge>=1.1",
  "pytest>=8.0",
  "ruff>=0.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/complier"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/complier"]

[tool.coverage.report]
show_missing = true
skip_covered = false
omit = [
  "tests/*",
]
