[package]
name = "complier"
version = "0.1.0"
edition = "2021"
description = "complier CLI — talks to the complier daemon for runtime contract enforcement."

[[bin]]
name = "complier"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
