[package]
name = "session"
version = "0.1.0"
edition = "2021"

[dependencies]
ast = { path = "../ast" }
runtime = { path = "../runtime" }
compiler = { path = "../compiler" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
tokio = { version = "1", features = ["sync", "macros", "rt"] }

[dev-dependencies]
parser = { path = "../parser" }
tempfile = "3"
tokio = { version = "1", features = ["sync", "macros", "rt", "rt-multi-thread"] }
