[package]
name = "wrappers"
version = "0.1.0"
edition = "2021"

[lib]
name = "wrappers"
path = "src/lib.rs"

[[bin]]
name = "complier-mcp-proxy"
path = "src/bin/mcp_proxy.rs"

[dependencies]
session = { path = "../session" }
ast = { path = "../ast" }
runtime = { path = "../runtime" }
compiler = { path = "../compiler" }
parser = { path = "../parser" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "process", "sync"] }
anyhow = "1"
tracing = "0.1"
rmcp = { version = "1.5", features = [
    "server",
    "client",
    "transport-io",
    "transport-child-process",
    "macros",
] }
schemars = "1"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
